updated all features